Wrap the console output to avoid having to scroll horizontally

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,7 @@
     padding-right: 1.5rem;
     padding-bottom: 1.25rem;
     padding-left: 1.5rem;
+    white-space: pre-wrap;
 }
 
 .deleted * {
